# SpeedApplication

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/luongtd14/speedapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  video_editor.cpp
app/src/main/java/com/luongtd14/speedapplication/: MainActivity.java
app/src/main/java/com/luongtd14/speedapplication/activities/: EditActivity.java  MainActivity.java
app/src/main/java/com/luongtd14/speedapplication/android_view_customs/: CustomSurfaceView.java
app/src/main/java/com/luongtd14/speedapplication/utils/: PathUtils.java
app/src/main/res/layout/: activity_edit.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/luongtd14/speedapplication/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
